src/objects/Accounting_Featurerate__c.object
<CustomObject>
    <label>Accounting_FeatureRate</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Accounting_Featurerate #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_FeatureRate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>feature</label>
        <referenceTo>accounting_feature__c</referenceTo>
        <relationshipLabel>Accounting_FeatureRate</relationshipLabel>
        <relationshipName>Accounting_FeatureRate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>monthly_fee__c</fullName>
        <label>monthly_fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>monthly_limit__c</fullName>
        <label>monthly_limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>per_excess_fee__c</fullName>
        <label>per_excess_fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                    <label>CommCareHQ</label>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>